# my-rust-cheet-sheet

./: Cargo.toml
.github/workflows/: rust.yml
cheet_sheet/: Cargo.toml
cheet_sheet/src/: main.rs
generic_types_traits/: Cargo.toml
generic_types_traits/src/: lib.rs
handle_errors/src/: lib.rs
loop_while_for/src/: lib.rs
memory/src/: lib.rs
mod_packages_crates/: Cargo.toml
mod_packages_crates/src/: authentication.rs  lib.rs
notes/: Cargo.toml  info.txt
notes/src/: jmsar.rs  lib.rs
testing/src/: lib.rs
var_types_func/: Cargo.toml
var_types_func/src/: arrays.rs  enums.rs  hashmaps.rs  lib.rs  strings.rs  structs.rs  tuples.rs  vectors.rs
