[package]
name = "cheet_sheet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
var_types_func = { path = "../var_types_func" }
loop_while_for = { path = "../loop_while_for" }
handle_errors ={ path = "../handle_errors" }
memory ={ path = "../memory" }
generic_types_traits ={ path = "../generic_types_traits" }
mod_packages_crates ={ path = "../mod_packages_crates" }
testing ={ path = "../testing"}
